[tool.poetry]
name = {{cookiecutter.project_name}}
version = "0.1.0"
description = {{cookiecutter.project_name}}
authors = [{{cookiecutter.author}}]
license = "BSD 3"

[tool.poetry.dependencies]
python = "^3.8"
tox = "^3.25.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.19.2"
sphinx-click = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
